--- a/src/host/MarkdownViewerHost/MarkdownViewerHost.csproj
+++ b/src/host/MarkdownViewerHost/MarkdownViewerHost.csproj
@@ -7,6 +7,9 @@
     <!-- Target Windows 10 19041 or later -->
     <TargetFramework>net10.0-windows10.0.19041.0</TargetFramework>
     
+    <!-- Enable Windows Forms for TaskDialog support -->
+    <UseWindowsForms>true</UseWindowsForms>
+    
     <!-- Enable nullable reference types -->
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
