feat: Enhance MSIX packaging with staging validation tests and logging

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ src/core/icons/markdown - Copy*.ico
 **/BundleArtifacts/**
 installers - Copy/*
 preprocessed.xml
+dev/docs/installation-folder-content.txt
+dev/docs/stability-issues.md
